--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,17 @@
 .App-link {
   color: #09d3ac;
 }
+
+.container {
+  width: 100%;
+  padding: 0;
+}
+
+.navbar-nav {
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.nav-link {
+  margin-right: 20px;
+}
